change both width and height of the carousel container and the divs it contains to ensure it covers the full width of the page. Also set a margin-top to the carousel container

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,17 +113,18 @@ a{
 }
 
 .carousel{
-    width: 70%;
+    width: 100%;
     height: 200px;
     display: flex;
     overflow-x: auto;
     background-color: #DCDCC6;
     margin: auto;
     text-align: center;
+    margin-top: 200px;
 }
 
 .box{
-    width:400px;
+    width:100%;
     height:100%;
     flex-shrink: 0;
     color:#6F754D;
